--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
 		</p>
 
 		<p>
+		The lattest version can be downloaded from github via:
+		<code>
+			git clone git://github.com/hgn/captcp.git
+		</code>
 		</p>
 
 		<h1 id="warstories">War Stories</h1>
