--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<nav>
 			<ol>
 				<li><a href="#about">About</a></li>
+				<li><a href="#modules">Modules</a></li>
 				<li><a href="#installation">Installtion</a></li>
 				<li><a href="#examples">Examples</a></li>
 			</ol>
