--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		tcptrace, tcpslice, tcpstat and the other tools. After some years I
 		started to wrote an own set of scripts, starting with Perl and later
 		also some Ruby scripts. Before I forget, of course, a few C programs
-		are also in the collection. Captcp is the approach to rewrite the
+		are also in the collection. Captcp is the attempt to rewrite the
 		scripts in Python.
 		</p>
 		<h2>Some Word About Packet Analyzes</h2>
@@ -83,8 +83,7 @@
 			<li>If you know what you want to analyze you can adjust tcpdump to capture the required data</li>
 			<li>Make backups of your traces</li>
 			<li>Don't use one tool, find the most useful tool for your requirements</li>
-			<li>Question the results!</li>
-			<li></li>
+			<li>Last but not least: question the results!</li>
 		</ul>
 
 		<h1 id="modules">Modules</h1>
