one more module
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 		<ul class="links">
 			<li><strong>highlight</strong> - similar to tcpdump but with colorful highlighting and some other features</li>
 			<li><strong>stats</strong> - print TCP flow statistics</li>
+			<li><strong>geoip</strong> - for a given IP address the location is returned</li>
 		</ul>
 		</p>
 
@@ -172,6 +173,17 @@
 
 
 		<h2>Stats Module</h2>
+
+		<h2>GeoIP Module</h2>
+
+		<h3>Examples</h3>
+
+		<p>Print the location for a given IP address</p>
+		<div class="codebox">
+			captcp geoip 78.120.0.1
+		</div>
+		</p>
+
 
 		<h1 id="installation">Installation</h1>
 
