--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title></title>
+	<title>CAPTCP - PCAP Analyze Script</title>
 	
 	<meta name="title" content="PACTCP - A Python Based TCP Analyze Script">
 	<meta name="description" content="PACTCP - A Python Based TCP Analyze Script">
@@ -45,9 +45,13 @@
 	
 	<link rel="stylesheet" href="data/css/style.css">
 	<script src="data/js/modernizr-1.7.min.js"></script>
+<script type="text/javascript" src="http://use.typekit.com/nbn2flh.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 </head>
 <body>
+
+
 <div class="wrapper">
 	<header>
 		<h1><a href="/">CAPTCP</a></h1>
@@ -76,7 +80,9 @@
 		<p>During the years some wisdoms are here collected. You can ignore
 		them, sure, but eventually there are some tricks for you.</p>
 		
-		<figure><img src="data/images/seq.png" alt="A before and after view of the file structure." /></figure> 
+		<figure>
+		<img src="data/images/seq.png" alt="A before and after view of the file structure." />
+		</figure> 
 
 		<ul class="links">
 			<li>Don't capture data life - capture the data via tcpdump and analyze the data off-line</li>
