replace code by codebox
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.html
+++ b/index.html
@@ -267,21 +267,21 @@
 		</p>
 
 		<p>
-		<code>
+		<div class="codebox">
 			traceconvert legacyatm:auck4--0.gz pcapfile:auck4-0.pcap.gz
 			traceconvert legacypos:IPLS-KSCY-0.gz pcapfile:IPLS-KSCY--0.pcap.gz
 			traceconvert legacyeth:auck6-e0.gz pcapfile:auck6.pcap.gz
 			traceconvert erf:auck8-20031215-.gz pcapfile:auck8-20031215-.pcap.gz
 			traceconvert erf:leip1-20021121.gz pcapfile:leip1.pcap.gz
-		</code>
+		</div>
 		</p>
 
 		<h2>Merge Traces</h2>
 
 		<p>
-		<code>
+		<div class="codebox">
 			tracemerge pcapfile:auck-22-combined.gz legacyatm:auck-22-0.gz legacyatm:auck-22-1.gz
-		</code>
+		</div>
 		</p>
 
 	</article>
