--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@ captcp highlight -s -m 'tcp.flags &amp; TH_ACK and tcp.flags &amp; TH_SYN' trace
 
 		<h2>Stats Module</h2>
 
+		<figure>
+		<img src="data/images/connections-graphviz.png" alt="All connection
+		from one trace file visualized" />
+		</figure> 
+
 		<h2>GeoIP Module</h2>
 
 		<p>
