--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@ captcp highlight -s -m 'tcp.flags &amp; TH_ACK and tcp.flags &amp; TH_SYN' trace
 		<h2>Stats Module</h2>
 
 		<figure>
-		<img src="data/images/connections-graphviz.png" alt="All connection
-		from one trace file visualized" />
+		<img src="data/images/connections-graphviz.png" alt="All connection from one trace file visualized" />
 		</figure> 
 
 		<h2>GeoIP Module</h2>
@@ -228,6 +227,16 @@ captcp highlight -s -m 'tcp.flags &amp; TH_ACK and tcp.flags &amp; TH_SYN' trace
 		module is not limited to gnuplot.  It provides also Makefiles to
 		generate gnuplot files (PDF for LaTeX and PNG for web publishing).
 		</p>
+
+		<h2>Sequence Graph Module</h2>
+
+		The illustation provides another nice visualization of data. Not the
+		pure amount of data can be seen, rather a nice feeling of how many
+		packets are transmitted and received at a given time.
+
+		<figure>
+		<img src="data/images/sequence-graph-mass.png" alt="All connection from one trace file visualized" />
+		</figure> 
 
 		<h2>Payloadtime Module</h2>
 
