link to github page
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.htm
+++ b/index.htm
@@ -926,6 +926,12 @@ git clone git://github.com/hgn/captcp.git
 su -c make install
 </pre>
 
+		<p>
+		The project is currently hosted at <a href="github.com">github.com</a>. If
+		you wan't to fork or participate on github please see <a
+		href="https://github.com/hgn/captcp">https://github.com/hgn/captcp</a>
+		</p>
+
 		</div>
 	</div>
 	</section>
