--- a/index.htm
+++ b/index.htm
@@ -927,7 +927,7 @@ su -c make install
 </pre>
 
 		<p>
-		The project is currently hosted at <a href="github.com">github.com</a>. If
+		The project is currently hosted at <a href="http://github.com">github.com</a>. If
 		you wan't to fork or participate on github please see <a
 		href="https://github.com/hgn/captcp">https://github.com/hgn/captcp</a>
 		</p>
