--- a/index.htm
+++ b/index.htm
@@ -96,7 +96,7 @@
 -->
 	</header>
 
-			<img src="images/matrix.png" width="1170" height="200" alt="nice image" />
+			<img src="images/bg.png" alt="nice image" />
 
 
 <!-- About
